[gd_scene load_steps=43 format=2]

[ext_resource path="res://Sprites/Robot sprites/Dead (4).png" type="Texture" id=1]
[ext_resource path="res://Sprites/Robot sprites/Dead (10).png" type="Texture" id=2]
[ext_resource path="res://Sprites/Robot sprites/Dead (8).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Robot sprites/Dead (7).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Robot sprites/Dead (9).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Robot sprites/Dead (5).png" type="Texture" id=6]
[ext_resource path="res://Sprites/Robot sprites/Dead (1).png" type="Texture" id=7]
[ext_resource path="res://Sprites/Robot sprites/Dead (2).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Robot sprites/Dead (6).png" type="Texture" id=9]
[ext_resource path="res://Sprites/Robot sprites/Dead (3).png" type="Texture" id=10]
[ext_resource path="res://Sprites/Robot sprites/Shoot (3).png" type="Texture" id=11]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (4).png" type="Texture" id=12]
[ext_resource path="res://Sprites/Robot sprites/Idle (2).png" type="Texture" id=13]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (2).png" type="Texture" id=14]
[ext_resource path="res://Sprites/Robot sprites/Idle (5).png" type="Texture" id=15]
[ext_resource path="res://Sprites/Robot sprites/Shoot (4).png" type="Texture" id=16]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (1).png" type="Texture" id=17]
[ext_resource path="res://Sprites/Robot sprites/Idle (10).png" type="Texture" id=18]
[ext_resource path="res://Sprites/Robot sprites/Idle (4).png" type="Texture" id=19]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (7).png" type="Texture" id=20]
[ext_resource path="res://Sprites/Robot sprites/Idle (6).png" type="Texture" id=21]
[ext_resource path="res://Sprites/Robot sprites/Idle (9).png" type="Texture" id=22]
[ext_resource path="res://Sprites/Robot sprites/Shoot (2).png" type="Texture" id=23]
[ext_resource path="res://Sprites/Robot sprites/Idle (1).png" type="Texture" id=24]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (6).png" type="Texture" id=25]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (8).png" type="Texture" id=26]
[ext_resource path="res://Sprites/Robot sprites/Idle (3).png" type="Texture" id=27]
[ext_resource path="res://Sprites/Robot sprites/Idle (8).png" type="Texture" id=28]
[ext_resource path="res://Sprites/Robot sprites/Shoot (1).png" type="Texture" id=29]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (5).png" type="Texture" id=30]
[ext_resource path="res://Sprites/Robot sprites/RunShoot (3).png" type="Texture" id=31]
[ext_resource path="res://Sprites/Robot sprites/Run (4).png" type="Texture" id=32]
[ext_resource path="res://Sprites/Robot sprites/Run (3).png" type="Texture" id=33]
[ext_resource path="res://Sprites/Robot sprites/Run (6).png" type="Texture" id=34]
[ext_resource path="res://Sprites/Robot sprites/Run (5).png" type="Texture" id=35]
[ext_resource path="res://Sprites/Robot sprites/Run (1).png" type="Texture" id=36]
[ext_resource path="res://Sprites/Robot sprites/Run (2).png" type="Texture" id=37]
[ext_resource path="res://Sprites/Robot sprites/Run (7).png" type="Texture" id=38]
[ext_resource path="res://Scripts/Robots2.gd" type="Script" id=39]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 13 ), ExtResource( 19 ), ExtResource( 27 ), ExtResource( 15 ), ExtResource( 21 ), ExtResource( 28 ), ExtResource( 28 ), ExtResource( 22 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 16 ) ],
"loop": true,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ) ],
"loop": true,
"name": "die",
"speed": 15.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 14 ), ExtResource( 12 ), ExtResource( 31 ), ExtResource( 25 ), ExtResource( 30 ), ExtResource( 20 ), ExtResource( 26 ) ],
"loop": true,
"name": "runShoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 32 ), ExtResource( 35 ), ExtResource( 38 ), ExtResource( 34 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 130.443, 247.04 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2140.05, 56.0368 )

[node name="Robots" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 39 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -9.52448, 0 )
frames = SubResource( 5 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -17.4614, 12.6992 )
shape = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 400 )

[node name="Area2D" type="Area2D" parent="."]

[node name="PlayerDetector" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 7 )

[node name="TurnAxis" type="Position2D" parent="."]

[node name="CastPoint" type="Position2D" parent="TurnAxis"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
